# masy-net

./: .env.development  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
masy-net-frontend/src/: index.css  main.jsx
masy-net-frontend/src/components/: Background Animation.jsx  Card.jsx  FeatureCarousel.jsx  Footer.jsx  HeroAnimation.css  HeroAnimation.jsx  IcpAnimation.jsx  Navbar.jsx
masy-net-frontend/src/pages/: LandingPage.jsx  ManajemenPage.jsx
src/masy-net-backend/: main.mo
src/masy-net-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
src/masy-net-frontend/src/: App.jsx  index.css
src/masy-net-frontend/src/components/: AddContract.jsx  AddEmployeesModal.jsx  BgComponents.jsx  FeatureCarousel.jsx  Footer.jsx  Sidebar.jsx  TimelineHistory.jsx
src/masy-net-frontend/src/context/: AuthContext.jsx
src/masy-net-frontend/src/pages/: Dashboard.jsx  LandingPage.jsx  ManajemenPage.jsx  TimelineHistory.jsx
src/masy-net-frontend/utils/: actorClient.js
src/salary_net_backend/: Cargo.toml  salary_net_backend.did
src/salary_net_backend/src/: lib.rs
src/salary_net_frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/salary_net_frontend/src/: App.jsx  index.css  main.jsx
src/salary_net_frontend/src/components/: Footer.jsx  Navbar.jsx
src/salary_net_frontend/src/context/: AuthContext.jsx
src/salary_net_frontend/src/pages/: LandingPage.jsx  ManagementPage.jsx
